initial feedback bar
